--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.18",
     "@heroicons/vue": "^2.1.1",
+    "chart.js": "^4.4.1",
     "vue": "^3.3.11",
+    "vue-chartjs": "^5.3.0",
     "vue-router": "4"
   },
   "devDependencies": {
