--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@headlessui/vue": "^1.7.18",
     "@heroicons/vue": "^2.1.1",
     "chart.js": "^4.4.1",
+    "pinia": "^2.1.7",
     "vue": "^3.3.11",
     "vue-chartjs": "^5.3.0",
     "vue-router": "4"
